--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "react-webcam": "^5.2.4"
+    "react-webcam": "^5.2.4",
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
