--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-timeago": "^6.2.1",
     "react-webcam": "^5.2.4",
     "uuid": "^8.3.2"
   },
