--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "firebase": "^8.6.7",
     "firebase-tools": "^9.12.1",
     "react": "^17.0.2",
+    "react-countdown-circle-timer": "^2.5.3",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
